<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
            android:id="@+id/text_view_guide"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_title_banknotes"
            android:textSize="16sp"
            android:textColor="#000000"/>

    <LinearLayout
            android:id="@+id/linear_layout_hundred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_view_guide">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 100"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_hundred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linear_layout_fifty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_hundred">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 50"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_fifty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linear_layout_twenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_fifty">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 20"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_twenty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linear_layout_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_twenty">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 10"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_ten">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 5"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linear_layout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_five">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="R$ 2"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/edit_text_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linear_layout_result"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_two" app:layout_constraintVertical_bias="0.75">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:gravity="center">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                <Button
                        android:id="@+id/button_clean_coins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/label_button_clean_coins"
                        android:onClick="cleanCoinsAction"
                        android:layout_weight="1"/>

                <Button
                        android:id="@+id/button_coins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/label_button_coins"
                        android:onClick="coinsAction"
                        android:layout_weight="1"/>

            </LinearLayout>


            <Button
                    android:id="@+id/button_compute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/label_button_compute"
                    android:onClick="computeAction"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_result_banknotes"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_result_coins"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_result_total"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/text_view_result_banknotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="R$ 12"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                <TextView
                        android:id="@+id/text_view_result_coins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                <TextView
                        android:id="@+id/text_view_result_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>